--- a/tables/survey1_anova_table.html
+++ b/tables/survey1_anova_table.html
@@ -1,11 +1,10 @@
 
-<table style="text-align:center"><tr><td colspan="6" style="border-bottom: 1px solid black"></td></tr><tr><td style="text-align:left"></td><td>Df</td><td>Sum Sq</td><td>Mean Sq</td><td>F value</td><td>Pr(> F)</td></tr>
-<tr><td colspan="6" style="border-bottom: 1px solid black"></td></tr><tr><td style="text-align:left">Medium</td><td>4</td><td>1,045.615</td><td>261.404</td><td>103.550</td><td>0</td></tr>
-<tr><td style="text-align:left">Study</td><td>4</td><td>642.943</td><td>160.736</td><td>63.673</td><td>0</td></tr>
-<tr><td style="text-align:left">Familiarity</td><td>1</td><td>855.712</td><td>855.712</td><td>338.975</td><td>0</td></tr>
-<tr><td style="text-align:left">Education of respondant</td><td>1</td><td>3.612</td><td>3.612</td><td>1.431</td><td>0.232</td></tr>
-<tr><td style="text-align:left">Age of respondant</td><td>1</td><td>0.620</td><td>0.620</td><td>0.246</td><td>0.620</td></tr>
-<tr><td style="text-align:left">Gender of respondant</td><td>2</td><td>15.206</td><td>7.603</td><td>3.012</td><td>0.049</td></tr>
-<tr><td style="text-align:left">Respondant from U.S.</td><td>1</td><td>82.668</td><td>82.668</td><td>32.748</td><td>0</td></tr>
-<tr><td style="text-align:left">Residuals</td><td>4,504</td><td>11,369.950</td><td>2.524</td><td></td><td></td></tr>
-<tr><td colspan="6" style="border-bottom: 1px solid black"></td></tr></table>
+<table style="text-align:center"><tr><td colspan="5" style="border-bottom: 1px solid black"></td></tr><tr><td style="text-align:left"></td><td>npar</td><td>Sum Sq</td><td>Mean Sq</td><td>F value</td></tr>
+<tr><td colspan="5" style="border-bottom: 1px solid black"></td></tr><tr><td style="text-align:left">Medium</td><td>4</td><td>1,044.415</td><td>261.104</td><td>119.455</td></tr>
+<tr><td style="text-align:left">Study</td><td>4</td><td>639.765</td><td>159.941</td><td>73.173</td></tr>
+<tr><td style="text-align:left">Familiarity</td><td>1</td><td>672.929</td><td>672.929</td><td>307.866</td></tr>
+<tr><td style="text-align:left">Education of respondant</td><td>1</td><td>1.991</td><td>1.991</td><td>0.911</td></tr>
+<tr><td style="text-align:left">Age of respondant</td><td>1</td><td>0.371</td><td>0.371</td><td>0.170</td></tr>
+<tr><td style="text-align:left">Gender of respondant</td><td>2</td><td>8.492</td><td>4.246</td><td>1.943</td></tr>
+<tr><td style="text-align:left">Respondant from U.S.</td><td>1</td><td>46.057</td><td>46.057</td><td>21.071</td></tr>
+<tr><td colspan="5" style="border-bottom: 1px solid black"></td></tr></table>
