typo correction in table

--- a/tables/survey2_reg_table.html
+++ b/tables/survey2_reg_table.html
@@ -65,7 +65,7 @@
 <tr><td style="text-align:left">Gender: Male</td><td>0.049</td></tr>
 <tr><td style="text-align:left"></td><td>(-0.326, 0.423)</td></tr>
 <tr><td style="text-align:left"></td><td></td></tr>
-<tr><td style="text-align:left">Education: Univeristy+</td><td>0.015</td></tr>
+<tr><td style="text-align:left">Education: University+</td><td>0.015</td></tr>
 <tr><td style="text-align:left"></td><td>(-0.424, 0.454)</td></tr>
 <tr><td style="text-align:left"></td><td></td></tr>
 <tr><td style="text-align:left">Location: In the U.S.</td><td>-0.303</td></tr>
