--- a/tables/survey1_reg_table.html
+++ b/tables/survey1_reg_table.html
@@ -28,7 +28,7 @@
 <tr><td style="text-align:left">Familiarity</td><td>.228<sup>***</sup></td></tr>
 <tr><td style="text-align:left"></td><td>(.201, .255)</td></tr>
 <tr><td style="text-align:left"></td><td></td></tr>
-<tr><td style="text-align:left">Education: Univeristy+</td><td>-.004</td></tr>
+<tr><td style="text-align:left">Education: University+</td><td>-.004</td></tr>
 <tr><td style="text-align:left"></td><td>(-.123, .116)</td></tr>
 <tr><td style="text-align:left"></td><td></td></tr>
 <tr><td style="text-align:left">Age</td><td>.004</td></tr>
